# avg-grades

./: .gitignore  README.md  build.py  docker-compose.yml  presentation.aux  presentation.tex  pyproject.toml
.github/workflows/: nuitka-build.yml
published/: index.html  manifest.json
src/: main.py
